<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tabela"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/border"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_numero_nota"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/hint_numero_nota"
            android:textSize="15sp"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,-,_, ,qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_cliente"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:hint="@string/hint_cliente"
            android:textSize="15sp"
            android:inputType="text"
            android:digits="0,1,2,3,4,5,6,7,8,9,-,_, ,qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCVBNM"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/botao"
            android:onClick="salvarNovaLocacao"
            android:text="@string/bt_salvar"
            android:textColor="#FFF"
            android:textSize="17sp"
            android:textStyle="bold" />

    </TableLayout>
</LinearLayout>
