<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_span="2"
            android:text="@string/txt_tipo_estrutura"
            android:textSize="20sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/grupTipoEstrutura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioPrimaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/txt_primaria"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radioSecundaria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/txt_secundaria"
                android:textSize="17sp" />

        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_span="2"
            android:text="@string/txt_descricao"
            android:textSize="20sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textDescricaoEstrutura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_span="2"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/hint_descricao"
            android:inputType="text"
            android:textSize="20sp" />
    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/alertCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancelar" />

            <Button
                android:id="@+id/alertOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OK" />

        </TableRow>

    </TableLayout>

</LinearLayout>