<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastrar_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundoapp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="br.desenvolvedor.michelatz.aplicativohcc.CadastrarUsuario">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border">

        <TableLayout
            android:id="@+id/tabela"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_span="2"
                    android:text="@string/txt_nome"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_span="2"
                    android:drawableLeft="@drawable/ic_action_user"
                    android:ems="10"
                    android:hint="@string/hint_nome"
                    android:inputType="textPersonName"
                    android:textColor="#FFF"
                    android:textColorHint="#fff"
                    android:textStyle="italic"
                    android:typeface="sans" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_span="2"
                    android:text="@string/txt_email"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">


                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_span="2"
                    android:drawableLeft="@drawable/ic_action_mail"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textPersonName"
                    android:textColor="#FFF"
                    android:textColorHint="#fff"
                    android:textStyle="italic"
                    android:typeface="sans" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_senha"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">


                <EditText
                    android:id="@+id/edtSenha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_span="2"
                    android:drawableLeft="@drawable/ic_action_lock_closed"
                    android:ems="10"
                    android:hint="@string/hint_senha"
                    android:inputType="textPersonName"
                    android:textColor="#FFF"
                    android:textColorHint="#fff"
                    android:textStyle="italic"
                    android:typeface="sans" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">


                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/botao"
                    android:onClick="salvar"
                    android:text="@string/bt_salvar" />

            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>
