<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCC"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.desenvolvedor.michelatz.aplicativohcc.CadastrarEquipamento"
    tools:showIn="@layout/activity_consumidor_equipamento">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/border"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:shrinkColumns="*"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_span="4"
                            android:text="@string/txt_consumid"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="sans" />

                        <Button
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/botao"
                            android:onClick="adicionarConsumidor"
                            android:text="@string/bt_add"
                            android:textColor="#FFF"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="27dp"
                        android:layout_marginRight="5dp"
                        android:background="#000" />

                    <ListView
                        android:id="@+id/listViewConsumidor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="10dp" />

                </TableLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_cadastro_equipamento"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_tipo_equipamento"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <Spinner
                    android:id="@+id/spnTiposEquipamento"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/botao" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_numero_placa"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="sans" />


                <EditText
                    android:id="@+id/textNumeroPlacaEquipamento"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/hint_numero_placa"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="sans"/>

                <Button
                    android:id="@+id/button6"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/botao"
                    android:onClick="irProximoRetirarFoto"
                    android:text="@string/bt_proximo"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
