<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewConversas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="#FFF"
        card_view:contentPadding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtMensagem"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginLeft="2dp"
                        android:background="#FFFFFF"
                        android:text="@string/txt_nome_documento"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:text="@string/txt_espaco" />

                </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:id="@+id/btnDelete3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="#FFFFFF"
                android:contentDescription="@string/descricao_exclusao"
                android:gravity="left"
                android:onClick="deletaItem"
                app:srcCompat="@drawable/ic_delete" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>